--- a/assets/main.scss
+++ b/assets/main.scss
@@ -671,4 +671,22 @@ a.post-title:hover {
   border-top: 1px solid var(--border-color);
 }
 
+.search-input {
+  font-size: 16px;
+  background: #f5f5f5;
+  border:0;
+  float: right;
+  width: 150px;
+  border-radius: 5px;
+  font-weight: 300;
+  padding: 8px;
+  line-height: 16px;
+  margin: 10px;
+}
+@media screen and (max-width: 600px) {
+  .search-input {
+    margin-right: 66px;
+  }
+}
+
 @import 'night';
